' This is a UML overview of reactris app and how it is constructed
@startuml Domain Model
skinparam BackgroundColor #EEEBDC
note "Reactris class diagram of model" as diagramtext

abstract class "Block" as Block {
  blockIndex: number
  pX: number
  pY: number
  spinPosition: number
  bricks: brickModelType[]
  turnLeft()
  turnRight()
  moveLeft()
  moveRight()
  moveDown()
  getBlockColor()
}

note left of Block : Object containing {x,y} and\nspin position and brick structure

class leftblock extends Block {
  getBrickPosition(): number[][]
}

class rightblock extends Block {
  getBrickPosition(): number[][]
}

class lineblock extends Block {
  getBrickPosition(): number[][]
}

class "Playground" as Playground {
  - {static} instance: playground
  gameover: boolean
  pause: boolean
  level: number
  wall: Wall
  score: number
  activeBlock: Block
  ' initWallHeight: number
  ' brickSize: number
  ' brickSpace: number
  ' windowSizeX: number
  ' windowSizeY: number
  
  'getInstance(winX: number, winY: number): playground
  generateNextBlock(): Block
  incTimer(): void
  ' reset(): void
  getWall(): Wall
  ' getScore(): number
  ' updateBlockWallStatus(): void
}

note top of Playground : Singleton class that contains \n the game logic related

class "Wall" as Wall {
  numColumns: number
  numRows: number
  wall: number[][]
  initWall(columns, rows, height): void
  getWall(): number[][]
  addColumn()
  deleteColumn()
  setColumn(col)
  setRows(rows:number)
  addRow()
  deleteRow()
  addBlock()
  check4CompletedRows(): number
}

note left of Wall : Current structure of brick wall

Playground "1" *-- "1" Block : activeBlock
Playground "1" -- "1" Wall : contains wall


@enduml